reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__epistemics__knowledge_context.rs_line_1156_col_5_001.log

*** crates/tracewake-core/src/epistemics/knowledge_context.rs:1156:5: replace baseline_embodied_provenance -> Vec<KnowledgeProvenanceEntry> with vec![Default::default()]

*** mutation diff:
--- crates/tracewake-core/src/epistemics/knowledge_context.rs
+++ replace baseline_embodied_provenance -> Vec<KnowledgeProvenanceEntry> with vec![Default::default()]
@@ -1148,43 +1148,17 @@
         ForbiddenKnowledgeSource::HiddenItemLocation,
         ForbiddenKnowledgeSource::OtherActorsPrivateBeliefs,
         ForbiddenKnowledgeSource::HumanDebugNotes,
         ForbiddenKnowledgeSource::PreviousPossessedActorKnowledge,
     ])
 }
 
 fn baseline_embodied_provenance() -> Vec<KnowledgeProvenanceEntry> {
-    vec![
-        KnowledgeProvenanceEntry::actor_known_source(
-            KnowledgeProvenanceKind::Perception,
-            AllowedKnowledgeSource::OwnDirectObservation,
-            "context_source_policy",
-        ),
-        KnowledgeProvenanceEntry::actor_known_source(
-            KnowledgeProvenanceKind::Observation,
-            AllowedKnowledgeSource::OwnSearchOrTouchObservation,
-            "context_source_policy",
-        ),
-        KnowledgeProvenanceEntry::actor_known_source(
-            KnowledgeProvenanceKind::Observation,
-            AllowedKnowledgeSource::OwnSoundObservation,
-            "context_source_policy",
-        ),
-        KnowledgeProvenanceEntry::actor_known_source(
-            KnowledgeProvenanceKind::Record,
-            AllowedKnowledgeSource::OwnAbsenceMarker,
-            "context_source_policy",
-        ),
-        KnowledgeProvenanceEntry::actor_known_source(
-            KnowledgeProvenanceKind::Belief,
-            AllowedKnowledgeSource::OwnSourceBackedBelief,
-            "context_source_policy",
-        ),
-    ]
+    vec![Default::default()] /* ~ changed by cargo-mutants ~ */
 }
 
 #[allow(clippy::too_many_arguments)]
 fn canonical_hash_inputs(
     holder_known_context_id: &HolderKnownContextId,
     viewer_actor_id: &ActorId,
     bound_actor_id: &ActorId,
     mode: ViewMode,


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/epistemics/knowledge_context.rs` has changed (1781909132.623923778s, 5s after last build at 1781909127.003923759s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `KnowledgeProvenanceEntry: Default` is not satisfied
    --> crates/tracewake-core/src/epistemics/knowledge_context.rs:1156:10
     |
1156 |     vec![Default::default()] /* ~ changed by cargo-mutants ~ */
     |          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `KnowledgeProvenanceEntry`
    --> crates/tracewake-core/src/epistemics/knowledge_context.rs:118:1
     |
 118 | pub struct KnowledgeProvenanceEntry {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
